--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "postcss-pxtorem": "^4.0.1",
+    "view-design": "^4.0.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
